# mcp-server-data-exploration

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  HYBRID_DATA_MANAGEMENT_BUSINESS_LOGIC.md  LICENSE  README.md  TASK.md  coverage.xml  mcpo-run.sh  pyproject.toml  setup.py  test_gitlint.md
.cursor/rules/: project-rules.mdc
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/mcp_server_ds/: __init__.py  base_data_manager.py  data_manager.py  diskcache_data_manager.py  hybrid_data_manager.py  in_memory_data_manager.py  server.py  session_metadata.py  slack_utils.py  storage_types.py  system_utils.py  ttl_in_memory_data_manager.py
src/mcp_server_ds/utils/: df_info_utils.py  inspect_utils.py  io_utils.py  notes_utils.py  script_exec.py  session_utils.py
tests/: __init__.py  conftest.py  test_session_isolation.py
tests/fixtures/: sample_data.csv
tests/integration/: test_hybrid_integration.py  test_mcp_integration.py  test_scriptrunner_data_manager.py
tests/unit/: test_base_data_manager.py  test_data_manager.py  test_data_manager_abstract.py  test_df_info_utils.py  test_diskcache_data_manager.py  test_hybrid_comprehensive.py  test_hybrid_data_manager.py  test_hybrid_edge_cases.py  test_hybrid_graceful_degradation.py  test_hybrid_memory_first.py  test_hybrid_memory_pressure.py  test_hybrid_session_reload.py  test_init.py  test_inspect_utils.py  test_server.py  test_session_metadata.py  test_slack_utils.py  test_storage_types.py  test_system_utils.py  test_tools.py  test_ttl_in_memory_comprehensive.py  test_ttl_in_memory_data_manager.py  test_utils.py
tests/utils/: __init__.py  mock_system_resources.py
