[project]
name = "mcp-server-ds"
version = "0.2.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "rich<14.0.0,>=13.6.0",
 "fastmcp>=2.0.0",
 "numpy>=2.1.3",
 "pandas>=2.2.3",
 "scikit-learn>=1.5.2",
 "scipy>=1.14.1,<1.16.0",
 "statsmodels>=0.14.4",
 "arrow>=1.3.0",
 "pyarrow>=20.0.0",
 "pytesseract>=0.3.13",
 "PyMuPDF>=1.25.5",
 "pillow>=11.1.0",
]
[[project.authors]]
name = "Xing Xing"
email = "xingxingumich@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-ds = "mcp_server_ds:main"
