[project]
name = "mcp-server-ds"
version = "0.2.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
 "rich<14.0.0,>=13.6.0",
 "fastmcp>=2.12.3",
 "numpy>=2.3.3",
 "pandas>=2.3.2",
 "scikit-learn>=1.7.2",
 "scipy>=1.14.1,<1.16.0",
 "statsmodels>=0.14.5",
 "arrow>=1.3.0",
 "pyarrow>=21.0.0",
 "pytesseract>=0.3.13",
 "PyMuPDF>=1.26.4",
 "pillow>=11.3.0",
]
[[project.authors]]
name = "Xing Xing"
email = "xingxingumich@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-ds = "mcp_server_ds:main"
